OLD/02-Traffic_management/01-2_deployments_method/gateway.yaml
# https://github.com/istio/istio/blob/master/samples/helloworld/helloworld-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-vs
spec:
  hosts:
    - "*"
  gateways:
    - helloworld-gateway
  http:
    - name: firefox
      match:
        - uri:
            exact: /helloworld
          headers:
            user-agent:
              regex: '.*Firefox.*'
      route:
        - destination:
            host: helloworld.default.svc.cluster.local
            port:
              number: 80
            subset: nginx
      rewrite:
        uri: "/"
    - name: curl
      match:
        - headers:
            user-agent:
              regex: '.*curl.*'
          uri:
            exact: /helloworld
      route:
        - destination:
            host: helloworld.default.svc.cluster.local
            port:
              number: 80
            subset: apache
      rewrite:
        uri: "/"
    - name: default
      match:
          - uri:
              exact: /helloworld
      route:
        - destination:
            host: helloworld.default.svc.cluster.local
            port:
              number: 80
            subset: default
      rewrite:
        uri: "/"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld.default.svc.cluster.local # Destination that will "interject"
spec:
  host: helloworld.default.svc.cluster.local # Full destination service, lil better for consistency
  subsets:
    - name: default
      labels:
        version: v0
    - name: nginx
      labels:
        version: v1
    - name: apache
      labels:
        version: v2
